@@ -1,0 +1,2 @@
+<p><strong>Password Reset Information</strong></p>
+<p>Your password has already been reset or the link expired. If you need to reset your password again, click <a href="#">here</a>.</p>
