@@ -1,5 +1,6 @@
 Changelog file for Login component.
 
+- Expired/used password reset link notification
 - Added autoLogin and forceChangePassword to ResetPassword snippet
 - Added autoLogin param to Register snippet
 - Improved password reset functionality
